--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="./index.css" />
+    <title>Form validation</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="section1">
+        <h1>
+          Learn to code by<br />
+          watching others
+        </h1>
+        <p>
+          see how experienced developers solve problems in real-time.<br />
+          Watching scripted tutorials is great, but understanding how<br />
+          developers think is invaluable.
+        </p>
+      </div>
+      <div class="section2">
+        <p class="top">
+          <strong>Try it free 7 days</strong> then $20/mo. thereafter
+        </p>
+        <form>
+          <div class="inputContainer">
+            <input
+              type="text"
+              name="name"
+              class="form-control"
+              placeholder="Name"
+            />
+            <img
+              class="icon"
+              id="name-icon"
+              src="/utils/images/icon-error.svg"
+            />
+            <em><p class="error" id="name">First Name cannot be empty</p></em>
+          </div>
+          <div class="inputContainer">
+            <input
+              type="text"
+              name="lastname"
+              class="form-control"
+              placeholder="Last Name"
+            />
+            <img
+              class="icon"
+              id="lastname-icon"
+              src="/utils/images/icon-error.svg"
+            />
+            <em
+              ><p class="error" id="lastname">Last Name cannot be empty</p></em
+            >
+          </div>
+          <div class="inputContainer">
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              placeholder="Email Address"
+            />
+            <img
+              class="icon"
+              id="email-icon"
+              src="/utils/images/icon-error.svg"
+            />
+            <em
+              ><p class="error" id="email">
+                Looks like this is not an email
+              </p></em
+            >
+          </div>
+          <div class="inputContainer">
+            <input
+              type="password"
+              name="password"
+              class="form-control"
+              placeholder="password"
+            />
+            <img
+              class="icon"
+              id="password-icon"
+              src="/utils/images/icon-error.svg"
+            />
+            <em><p class="error" id="password">Password cannot be empty</p></em>
+          </div>
+          <button type="submit">CLAIM YOUR FREE TRIAL</button>
+          <p class="bottom">
+            By clicking the button you are signing to our
+            <span>Terms and Services</span>
+          </p>
+        </form>
+      </div>
+    </div>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
